Reduce Floci service duplication